EXTL-8107 - Fixed create backup and measurement functions

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -1,43 +1,45 @@
 {
-    "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Acronis backup charge for {0} {1}",
-    "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "Billig method that will charge the specified number of units depending on the maximum amount of backup storgae used within the billing period",
-    "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Acronis backup billing",
-    "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow for the acronis backup system",
-    "#__ACRONIS_BACKUP_MESSAGE_REGISTER_FAILED": "Server is not registered",
-    "#__ACRONIS_BACKUP_MESSAGE_REGISTER_SUCCESS": "Server is registered",
-    "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}",
-    "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on",
-    "#__ACRONIS_BACKUP_NAME": "Acronis Backup",
-    "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service account",
-    "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Login",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_DESCRIPTION": "Determine if the server is currently registered with the backup service",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_NAME": "Check Registration",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_DESCRIPTION": "Setup your Acronis account",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_NAME": "Setup Account",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The administrator's Acronis account backup group",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_NAME": "Acronis Billing Entity Settings",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_DESCRIPTION": "The admin Acronis account password",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_NAME": "Password",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_DESCRIPTION": "The URL of the acronis backup service",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup Service URL",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_DESCRIPTION": "The admin Acronis account username",
-    "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_NAME": "Username",
-    "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis Customer Settings",
-    "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier",
-    "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Acronis ID",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_DESCRIPTION": "Enable backup for the server",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_NAME": "Enable backup",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_DESCRIPTION": "Select the time interval for backup frequency",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_NAME": "Backup frequency",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_NAME": "Acronis Server Settings",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_DESCRIPTION": "A password used to encrypt your backup. If you do not want to encrypt your backup, leave this blank",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time Acronis retains the backup for",
-    "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention",
-    "#__ACRONIS_BACKUP_RETENTION_OPTION_1": "Indefinitely",
-    "#__ACRONIS_BACKUP_RETENTION_OPTION_2": "30 days",
-    "ACRONIS_BACKUP":"Acronis Backup",
-	"FCO_EXTENSION":"FCO Extension",
+  "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Acronis backup charge for {0} {1}", 
+  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "Billig method that will charge the specified number of units depending on the maximum amount of backup storgae used within the billing period", 
+  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Acronis backup billing", 
+  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow for the acronis backup system", 
+  "#__ACRONIS_BACKUP_MESSAGE_REGISTER_FAILED": "Server is not registered", 
+  "#__ACRONIS_BACKUP_MESSAGE_REGISTER_SUCCESS": "Server is registered", 
+  "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
+  "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
+  "#__ACRONIS_BACKUP_NAME": "Acronis Backup", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_DESCRIPTION": "Setup your Acronis account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_NAME": "Setup Account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The administrator's Acronis account backup group", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_NAME": "Acronis Billing Entity Settings", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_DESCRIPTION": "The admin Acronis account password", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_NAME": "Password", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_DESCRIPTION": "The URL of the acronis backup service", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup Service URL", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_DESCRIPTION": "The admin Acronis account username", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_NAME": "Username", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service control panel", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Backup Service Login", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_DESCRIPTION": "Login to the web restore control panel", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Web Restore Login", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Acronis ID", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis Customer Settings", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_NAME": "Check Registration", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_DESCRIPTION": "Enable backup for the server", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_NAME": "Enable backup", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_DESCRIPTION": "Select the time interval for backup frequency", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_NAME": "Backup frequency", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_NAME": "Acronis Server Settings", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_DESCRIPTION": "A password used to encrypt your backup. If you do not want to encrypt your backup, leave this blank", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time Acronis retains the backup for", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention", 
+  "#__ACRONIS_BACKUP_RETENTION_OPTION_1": "Indefinitely", 
+  "#__ACRONIS_BACKUP_RETENTION_OPTION_2": "30 days", 
+  "ACRONIS_BACKUP": "Acronis Backup", 
+  "FCO_EXTENSION": "FCO Extension"
 }
