--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -1,33 +1,41 @@
 {
-  "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Acronis backup charge for {0} {1}", 
-  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "Billig method that will charge the specified number of units depending on the maximum amount of backup storgae used within the billing period", 
-  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Acronis backup billing", 
-  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow for the acronis backup system", 
-  "#__ACRONIS_BACKUP_MESSAGE_REGISTER_FAILED": "Server is not registered", 
-  "#__ACRONIS_BACKUP_MESSAGE_REGISTER_SUCCESS": "Server is registered", 
+  "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Backup storage charge for {0} {1}", 
+  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "This billing method measures the amount of storage space occupied by each server backup on the BaaS platform. The Repeat Units (units) field should contain the amount of units to bill the user per your selected Measurement Type of storage space used on the BaaS platform. Note that this billing method does not charge for network transfer to/from the BaaS platform.", 
+  "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Bill for backup storage usage", 
+  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow for the Acronis backup system",
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
-  "#__ACRONIS_BACKUP_NAME": "Acronis Backup", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_DESCRIPTION": "Setup your Acronis account", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_SETUP_ACCOUNT_NAME": "Setup Account", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The administrator's Acronis account backup group", 
+  "#__ACRONIS_BACKUP_NAME": "Acronis Backup as a Service", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_DESCRIPTION": "Unlink your Acronis account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_NAME": "Unlink Account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The end-user company group id", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_NAME": "Acronis Billing Entity Settings", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_DESCRIPTION": "The admin Acronis account password", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_DESCRIPTION": "The admin account password", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_NAME": "Password", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_DESCRIPTION": "The URL of the acronis backup service", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_DESCRIPTION": "The URL of the backup service", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup Service URL", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_DESCRIPTION": "The admin Acronis account username", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_NAME": "Username", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_DESCRIPTION": "Display the configuration details requred for the backup service", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_ERROR": "Could not display the backup service configuration details", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_MESSAGE": "The backup service configuration details", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Display Details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service control panel", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Backup Service Login", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_DESCRIPTION": "Login to the web restore control panel", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Web Restore Login", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_DESCRIPTION": "The password for the backup account user", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Acronis ID", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis Customer Settings", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ACTION_REGISTER_ACCOUNT_NAME": "Check Registration", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_USERNAME_DESCRIPTION": "The username/login for the backup account user", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_USERNAME_NAME": "Username", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_NAME": "Registration Status", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_DESCRIPTION": "Enable backup for the server", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_NAME": "Enable backup", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_DESCRIPTION": "Select the time interval for backup frequency", 
@@ -37,7 +45,9 @@
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time Acronis retains the backup for", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention",  
+  "#__ACRONIS_BACKUP_REGISTRATION_COMPLETE": "Registered", 
+  "#__ACRONIS_BACKUP_REGISTRATION_INCOMPLETE": "Not registered", 
   "#__ACRONIS_BACKUP_RETENTION_OPTION_1": "Indefinitely", 
   "#__ACRONIS_BACKUP_RETENTION_OPTION_2": "30 days", 
   "ACRONIS_BACKUP": "Acronis Backup", 
