EXTL-8353 - Update so provider properly deletes backup plan

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -2,10 +2,10 @@
   "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Backup storage charge for {0} {1}", 
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "This billing method measures the amount of storage space occupied by each server backup on the BaaS platform. The Repeat Units (units) field should contain the amount of units to bill the user per your selected Measurement Type of storage space used on the BaaS platform. Note that this billing method does not charge for network transfer to/from the BaaS platform.", 
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Bill for backup storage usage", 
-  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow for the Acronis backup system",
+  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow use of the Acronis Backup-as-a-Service",
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
-  "#__ACRONIS_BACKUP_NAME": "Acronis Backup as a Service", 
+  "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_DESCRIPTION": "Unlink your Acronis account", 
@@ -22,11 +22,11 @@
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_DESCRIPTION": "Display the configuration details requred for the backup service", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_ERROR": "Could not display the backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_MESSAGE": "The backup service configuration details", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Display Details", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Show service details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service control panel", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Backup Service Login", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Login to backup portal", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_DESCRIPTION": "Login to the web restore control panel", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Web Restore Login", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Login to restore portal", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_DESCRIPTION": "The password for the backup account user", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier", 
@@ -40,11 +40,11 @@
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_NAME": "Enable backup", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_DESCRIPTION": "Select the time interval for backup frequency", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_NAME": "Backup frequency", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_NAME": "Acronis Server Settings", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_NAME": "Backup", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_DESCRIPTION": "A password used to encrypt your backup. If you do not want to encrypt your backup, leave this blank", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time Acronis retains the backup for", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time backup service retains the backup for", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention",  
   "#__ACRONIS_BACKUP_REGISTRATION_COMPLETE": "Registered", 
   "#__ACRONIS_BACKUP_REGISTRATION_INCOMPLETE": "Not registered", 
