EXTL-8353 - Updates to better support CentOS linux
Added message with link/unlink account refresh page function

Updated make file to add the win backup setup app to public blob

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -5,10 +5,12 @@
   "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow use of the Acronis Backup-as-a-Service",
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
-  "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service", 
+  "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_MESSAGE": "Successfully linked to Acronis account",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_DESCRIPTION": "Unlink your Acronis account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_MESSAGE": "Successfully unlinked to Acronis account",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_NAME": "Unlink Account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The end-user company group id", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group", 
@@ -19,7 +21,7 @@
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup Service URL", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_DESCRIPTION": "The admin Acronis account username", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_NAME": "Username", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_DESCRIPTION": "Display the configuration details requred for the backup service", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_DESCRIPTION": "Display the configuration details required for the backup service", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_ERROR": "Could not display the backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_MESSAGE": "The backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Show service details", 
