EXTL-8552 - Added cleanup scheduled trigger

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -10,7 +10,7 @@
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_MESSAGE": "Successfully linked to Acronis account",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_DESCRIPTION": "Unlink your Acronis account", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_MESSAGE": "Successfully unlinked to Acronis account",
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_MESSAGE": "Successfully unlinked from Acronis account",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_NAME": "Unlink Account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The end-user company group id", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group", 
