--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -6,6 +6,8 @@
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
   "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service",
+  "#__ACRONIS_BACKUP_OS_TYPE_LINUX": "Linux", 
+  "#__ACRONIS_BACKUP_OS_TYPE_WINDOWS": "Windows", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_MESSAGE": "Successfully linked to Acronis account",
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
@@ -25,19 +27,21 @@
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_ERROR": "Could not display the backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_MESSAGE": "The backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Show service details", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_DESCRIPTION": "Download the setup script for the Server.", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_NAME": "Download Setup Script", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_OS_TYPE_DESCRIPTION": "The operating system you want to download the setup script for.", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_OS_TYPE_NAME": "Operating System", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service control panel", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Login to backup portal", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_DESCRIPTION": "Login to the web restore control panel", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Login to restore portal", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_DESCRIPTION": "The password for the backup account user", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Acronis ID", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis Customer Settings", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_DESCRIPTION": "The password for the backup account user", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_USERNAME_DESCRIPTION": "The username/login for the backup account user", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_USERNAME_NAME": "Username", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_NAME": "Registration Status", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_DESCRIPTION": "Enable backup for the server", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_ENABLED_NAME": "Enable backup", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_FREQUENCY_DESCRIPTION": "Select the time interval for backup frequency", 
@@ -46,6 +50,8 @@
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_DESCRIPTION": "A password used to encrypt your backup. If you do not want to encrypt your backup, leave this blank", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_NAME": "Registration Status", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time backup service retains the backup for", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention",  
   "#__ACRONIS_BACKUP_REGISTRATION_COMPLETE": "Registered", 
