--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -3,6 +3,8 @@
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "This billing method measures the amount of storage space occupied by each server backup on the BaaS platform. The Repeat Units (units) field should contain the amount of units to bill the user per your selected Measurement Type of storage space used on the BaaS platform. Note that this billing method does not charge for network transfer to/from the BaaS platform.", 
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Bill for backup storage usage", 
   "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow use of the Acronis Backup-as-a-Service",
+  "#__ACRONIS_BACKUP_EMAIL_BACKUP_FAILED_BODY": "Cleaning up backups for machine {0} belonging to customer {1} ({2}) has failed.\n\nThe machine will be removed from the backup service as it is no longer associated with a backup product offer and has not been backed up in the last 24 hours.\n\nYou will need to manually delete the backups from the backup service to avoid any unnecessary charges for the storage used to store the backups.",
+  "#__ACRONIS_BACKUP_EMAIL_BACKUP_FAILED_SUBJECT": "Backup clean up failed for machine {0}",
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
   "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service",
