--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -10,17 +10,17 @@
   "#__ACRONIS_BACKUP_OS_TYPE_WINDOWS": "Windows", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_MESSAGE": "Successfully linked to Acronis account",
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link Account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_NAME": "Link account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_DESCRIPTION": "Unlink your Acronis account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_MESSAGE": "Successfully unlinked from Acronis account",
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_NAME": "Unlink Account", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_UNLINK_ACCOUNT_NAME": "Unlink account", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_DESCRIPTION": "The end-user company group id", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_BACKUP_GROUP_NAME": "Acronis backup group", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_NAME": "Acronis Billing Entity Settings", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_NAME": "Acronis billing entity settings", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_DESCRIPTION": "The admin account password", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_DESCRIPTION": "The URL of the backup service", 
-  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup Service URL", 
+  "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_SERVICE_URL_NAME": "Backup service URL", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_DESCRIPTION": "The admin Acronis account username", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_USERNAME_NAME": "Username", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_DESCRIPTION": "Display the configuration details required for the backup service", 
@@ -35,9 +35,9 @@
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_NAME": "Login to backup portal", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_DESCRIPTION": "Login to the web restore control panel", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_RESTORE_NAME": "Login to restore portal", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The Acronis account identifier", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Acronis ID", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis Customer Settings", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_DESCRIPTION": "The backup account identifier", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ID_NAME": "Backup ID", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_NAME": "Acronis customer settings", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_DESCRIPTION": "The password for the backup account user", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_PASSWORD_NAME": "Password", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_USERNAME_DESCRIPTION": "The username/login for the backup account user", 
@@ -51,7 +51,7 @@
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_NAME": "Encryption password", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_PASSWORD_PLACEHOLDER": "Not encrypted", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_DESCRIPTION": "Determine if the server is currently registered with the backup service", 
-  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_NAME": "Registration Status", 
+  "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_REGISTRATION_STATE_NAME": "Registration status", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_DESCRIPTION": "The length of time backup service retains the backup for", 
   "#__ACRONIS_BACKUP_PCT_SERVER_SETTINGS_RETENTION_NAME": "Backup retention",  
   "#__ACRONIS_BACKUP_REGISTRATION_COMPLETE": "Registered", 
