EXTL-8801 Fixing translations to be more like Acronis.

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -2,10 +2,10 @@
   "#__ACRONIS_BACKUP_BILLING_DESC_BACKUP_CHARGE": "Backup storage charge for {0} {1}", 
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_DESCRIPTION": "This billing method measures the amount of storage space occupied by each server backup on the BaaS platform. The Repeat Units (units) field should contain the amount of units to bill the user per your selected Measurement Type of storage space used on the BaaS platform. Note that this billing method does not charge for network transfer to/from the BaaS platform.", 
   "#__ACRONIS_BACKUP_BILLING_METHOD_SERVER_NAME": "Bill for backup storage usage", 
-  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow use of the Acronis Backup-as-a-Service",
+  "#__ACRONIS_BACKUP_DESCRIPTION": "Configuration provider to allow use of the Acronis Backup",
   "#__ACRONIS_BACKUP_MESSAGE_SETUP_ACCOUNT_FAILED": "Failed to setup Acronis account details. {0}", 
   "#__ACRONIS_BACKUP_MESSAGE_SSO_FAILED": "Failed to authenticate for single sign on", 
-  "#__ACRONIS_BACKUP_NAME": "Acronis Backup-as-a-Service",
+  "#__ACRONIS_BACKUP_NAME": "Acronis Backup",
   "#__ACRONIS_BACKUP_OS_TYPE_LINUX": "Linux", 
   "#__ACRONIS_BACKUP_OS_TYPE_WINDOWS": "Windows", 
   "#__ACRONIS_BACKUP_PCT_BE_SETTINGS_ACTION_LINK_ACCOUNT_DESCRIPTION": "Link your Acronis account", 
