EXTL-8552 - removed unneeded logging and uses of word acronis

--- a/translations/fco-acronis-translations.json
+++ b/translations/fco-acronis-translations.json
@@ -28,7 +28,7 @@
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_MESSAGE": "The backup service configuration details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DISPLAY_DETAILS_NAME": "Show service details", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_DESCRIPTION": "Download the setup script for the Server.", 
-  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_NAME": "Download Setup Script", 
+  "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_NAME": "Download setup script", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_OS_TYPE_DESCRIPTION": "The operating system you want to download the setup script for.", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_DOWNLOAD_SETUP_OS_TYPE_NAME": "Operating System", 
   "#__ACRONIS_BACKUP_PCT_CUSTOMER_SETTINGS_ACTION_LOGIN_ACCOUNT_DESCRIPTION": "Login to the backup service control panel", 
